fix white space in the footer

--- a/less/style.less
+++ b/less/style.less
@@ -1173,7 +1173,7 @@ button#go-button{
 
 .left-menu .underline {
   border-bottom: 1px #CCC solid;
-  padding-bottom: 7em;
+  padding-bottom: 4em;
 }
 
 .footer-menu-container{
